<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.postStory.PostStoryActivity">

    <ImageView
        android:id="@+id/img_post"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/story_picture"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/cam_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder"/>


    <EditText
        android:id="@+id/et_caption"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="Description"
        android:background="@drawable/dr_desc_colom"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/write_caption"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/upload_story"
        app:layout_constraintBottom_toBottomOf="@+id/et_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateDrawable="@drawable/prog_bar"
        android:visibility="invisible"
        android:progress="0"/>

    <Button
        android:id="@+id/cam_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Open_Camera"
        app:layout_constraintBottom_toTopOf="@+id/et_caption"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gallery_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/Gallery"
        app:layout_constraintBottom_toBottomOf="@+id/cam_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cam_btn"
        app:layout_constraintTop_toTopOf="@+id/cam_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>